change background and add animations

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 body {
-  overflow: hidden;
-  background-color: #06d6a0;
+  overflow-x: hidden;
+  background-color: #2c312f;
   color: #073b4c;
 }
 
